--- a/requirements.txt
+++ b/requirements.txt
@@ -1,46 +1,122 @@
 altair==5.3.0
 annotated-types==0.6.0
+asttokens==2.4.1
 attrs==23.2.0
+beautifulsoup4==4.12.3
 blinker==1.8.2
 cachetools==5.3.3
 certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
+comm==0.2.2
+contourpy==1.2.1
+cycler==0.12.1
+dacite==1.8.1
+debugpy==1.8.1
+decorator==5.1.1
+entrypoints==0.4
+exceptiongroup==1.2.1
+executing==2.0.1
+Faker==25.4.0
+favicon==0.7.0
+fonttools==4.52.1
 gitdb==4.0.11
 GitPython==3.1.43
+htbuilder==0.6.2
+htmlmin==0.1.12
 idna==3.7
+ImageHash==4.3.1
 inflection==0.5.1
+ipykernel==6.29.4
+ipython==8.24.0
+jedi==0.19.1
 Jinja2==3.1.4
+joblib==1.4.2
 jsonschema==4.22.0
 jsonschema-specifications==2023.12.1
+jupyter_client==8.6.2
+jupyter_core==5.7.2
+kiwisolver==1.4.5
+llvmlite==0.42.0
+lxml==5.2.2
+Markdown==3.6
 markdown-it-py==3.0.0
+markdownlit==0.0.7
 MarkupSafe==2.1.5
+matplotlib==3.8.4
+matplotlib-inline==0.1.7
 mdurl==0.1.2
+more-itertools==10.2.0
+multimethod==1.11.2
+nest-asyncio==1.6.0
+networkx==3.3
+numba==0.59.1
 numpy==1.26.4
 packaging==24.0
 pandas==2.2.2
+parso==0.8.4
+patsy==0.5.6
+pexpect==4.9.0
+phik==0.12.4
 pillow==10.3.0
+platformdirs==4.2.2
+prometheus_client==0.20.0
+prompt-toolkit==3.0.43
 protobuf==4.25.3
+psutil==5.9.8
+ptyprocess==0.7.0
+pure-eval==0.2.2
 pyairtable==2.3.3
 pyarrow==16.0.0
 pydantic==2.7.1
 pydantic_core==2.18.2
 pydeck==0.9.1
 Pygments==2.18.0
+pymdown-extensions==10.8.1
+pyparsing==3.1.2
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2024.1
+PyWavelets==1.6.0
+PyYAML==6.0.1
+pyzmq==26.0.3
 referencing==0.35.1
 requests==2.31.0
 rich==13.7.1
 rpds-py==0.18.1
+scipy==1.13.1
+seaborn==0.13.2
 six==1.16.0
 smmap==5.0.1
-streamlit==1.34.0
+soupsieve==2.5
+st-annotated-text==4.0.1
+st-theme==1.2.3
+stack-data==0.6.3
+statsmodels==0.14.2
+streamlit==1.35.0
+streamlit-camera-input-live==0.2.0
+streamlit-card==1.0.2
+streamlit-embedcode==0.1.2
+streamlit-extras==0.4.3
+streamlit-faker==0.0.3
+streamlit-image-coordinates==0.1.9
+streamlit-keyup==0.2.4
+streamlit-shadcn-ui==0.1.18
+streamlit-toggle-switch==1.0.2
+streamlit-vertical-slider==2.5.5
 tenacity==8.3.0
 toml==0.10.2
 toolz==0.12.1
 tornado==6.4
+tqdm==4.66.4
+traitlets==5.14.3
+typeguard==4.3.0
 typing_extensions==4.11.0
 tzdata==2024.1
 urllib3==2.2.1
+validators==0.28.3
+visions==0.7.6
 watchdog==4.0.0
+wcwidth==0.2.13
+wordcloud==1.9.3
+ydata-profiling==4.8.3
