--- a/requirements.txt
+++ b/requirements.txt
@@ -60,6 +60,7 @@ pexpect==4.9.0
 phik==0.12.4
 pillow==10.3.0
 platformdirs==4.2.2
+plotly==5.24.1
 prometheus_client==0.20.0
 prompt-toolkit==3.0.43
 protobuf==4.25.3
